--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<div class="list">
 
 				<ul>
-					<li class="onglet"><div class="image"><img src="" alt=""></div><div class="icon"><p>home</p></div></li>
-					<li class="onglet"><div class="image"><img src="" alt=""></div><div class="icon"><p>about</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/home.svg" alt="home"></div><div class="icon"><p>home</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/about.svg" alt="about"></div><div class="icon"><p>about</p></div></li>
 					<li class="onglet"><div class="image"><img src="" alt=""></div><div class="icon"><p>team</p></div></li>
 					<li class="onglet"><div class="image"><img src="" alt=""></div><div class="icon"><p>process</p></div></li>
 					<li class="onglet"><div class="image"><img src="" alt=""></div><div class="icon"><p>contact</p></div></li>
@@ -25,7 +25,7 @@
 			</div>
 
 		</div>
-		
+
 	</main>
 </body>
 </html>
