--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
 			<div class="list">
 
 				<ul>
+
 					<li class="onglet"><div class="image"><img src="images/home.svg" alt="home"></div><div class="icon"><p>home</p></div></li>
+
 					<li class="onglet"><div class="image"><img src="images/about.svg" alt="about"></div><div class="icon"><p>about</p></div></li>
-					<li class="onglet"><div class="image"><img src="" alt=""></div><div class="icon"><p>team</p></div></li>
-					<li class="onglet"><div class="image"><img src="" alt=""></div><div class="icon"><p>process</p></div></li>
-					<li class="onglet"><div class="image"><img src="" alt=""></div><div class="icon"><p>contact</p></div></li>
+
+					<li class="onglet"><div class="image"><img src="images/team.svg" alt="team"></div><div class="icon"><p>team</p></div></li>
+
+					<li class="onglet"><div class="image"><img src="images/process.svg" alt="process"></div><div class="icon"><p>process</p></div></li>
+
+					<li class="onglet"><div class="image"><img src="images/contact.svg" alt="contact"></div><div class="icon"><p>contact</p></div></li>
+
 				</ul>
 
 			</div>
