--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
-	<title>List Déroulante</title>
+	<title>Liste Déroulante</title>
 </head>
 <body>
 
@@ -16,15 +16,15 @@
 
 				<ul>
 
-					<li class="onglet"><div class="image"><img src="images/home.svg" alt="home"></div><div class="icon"><p>home</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/home.svg" alt="home"></div><div class="txte"><p>home</p></div></li>
 
-					<li class="onglet"><div class="image"><img src="images/about.svg" alt="about"></div><div class="icon"><p>about</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/about.svg" alt="about"></div><div class="txte"><p>about</p></div></li>
 
-					<li class="onglet"><div class="image"><img src="images/team.svg" alt="team"></div><div class="icon"><p>team</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/team.svg" alt="team"></div><div class="txte"><p>team</p></div></li>
 
-					<li class="onglet"><div class="image"><img src="images/process.svg" alt="process"></div><div class="icon"><p>process</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/process.svg" alt="process"></div><div class="txte"><p>process</p></div></li>
 
-					<li class="onglet"><div class="image"><img src="images/contact.svg" alt="contact"></div><div class="icon"><p>contact</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/contact.svg" alt="contact"></div><div class="txte"><p>contact</p></div></li>
 
 				</ul>
 
