--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 				<ul>
 
-					<li class="onglet"><div class="image"><img src="images/home.svg" alt="home"></div><div class="txte"><p>home</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/home.svg" alt="home"><p>home</p></div></li>
 
-					<li class="onglet"><div class="image"><img src="images/about.svg" alt="about"></div><div class="txte"><p>about</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/about.svg" alt="about"><p>about</p></div></li>
 
-					<li class="onglet"><div class="image"><img src="images/team.svg" alt="team"></div><div class="txte"><p>team</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/team.svg" alt="team"><p>team</p></div></li>
 
-					<li class="onglet"><div class="image"><img src="images/process.svg" alt="process"></div><div class="txte"><p>process</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/process.svg" alt="process"><p>process</p></li>
 
-					<li class="onglet"><div class="image"><img src="images/contact.svg" alt="contact"></div><div class="txte"><p>contact</p></div></li>
+					<li class="onglet"><div class="image"><img src="images/contact.svg" alt="contact"><p>contact</p></li>
 
 				</ul>
 
