--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
-	<title>Liste Déroulante</title>
+	<title>Liste Déroulante/Menu</title>
 </head>
 <body>
 
@@ -12,26 +12,93 @@
 
 		<div class="menu">
 			
-			<div class="list">
+			
 
-				<ul>
+				<ul class="onglet">
 
-					<li class="onglet"><div class="image"><img src="images/home.svg" alt="home"><p>home</p></div></li>
+					<li class="image">
 
-					<li class="onglet"><div class="image"><img src="images/about.svg" alt="about"><p>about</p></div></li>
+						<img src="images/home.svg" alt="home">
 
-					<li class="onglet"><div class="image"><img src="images/team.svg" alt="team"><p>team</p></div></li>
+					</li>
 
-					<li class="onglet"><div class="image"><img src="images/process.svg" alt="process"><p>process</p></li>
+					<li class="item">
 
-					<li class="onglet"><div class="image"><img src="images/contact.svg" alt="contact"><p>contact</p></li>
+						<a href="#">home</a>
+
+					</li>
+				</ul>
+
+				<ul class="onglet">
+
+					<li class="image">
+
+						<img src="images/about.svg" alt="about">
+
+					</li>
+
+					<li class="item">
+
+						<a href ="#">about</a>
+
+					</li>
 
 				</ul>
 
-			</div>
+
+				<ul class="onglet">
+
+					<li class="image">
+
+						<img src="images/team.svg" alt="team">
+
+					</li>
+
+					<li class="item">
+
+						<a href ="#">team</a>
+
+					</li>
+
+				</ul>
+
+				<ul class="onglet">
+
+					<li class="image">
+
+						<img src="images/process.svg" alt="process">
+
+					</li>
+
+					<li class="item">
+
+						<a href ="#">process</a>
+
+					</li>
+
+				</ul>
+
+				<ul class="onglet">
+
+					<li class="image">
+
+						<img src="images/contact.svg" alt="contact">
+
+					</li>
+
+					<li class="item">
+
+						<a href ="#">contact</a>
+
+					</li>
+
+				</ul>
+
+			
 
 		</div>
 
 	</main>
+	
 </body>
 </html>
